--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
     <main id="content" class="main-content" role="main">
       <h1 id="mirror-bot-access-">Mirror Bot Access 🔐</h1>
-<p>Lets get your Access to Mirror-Bot’s Cloud to easily access your requested Files from Google Drive Itself.😊</p>
-<h2 id="️-how-to-get-">⚙️ How to Get ?</h2>
+<p><b>Lets get your Access to Mirror-Bot’s Cloud to easily access your requested Files from Google Drive Itself.😊</b></p>
+<h2 id="️-how-to-get-"><b>⚙️ How to Get ?</b></h2>
 <h4><b> 1.First you have to join our Mirror Bot's Google Group! <a href="https://bit.ly/Mirror-Bot"> Join Now!</a></b></h4>
 <h4><b> 2.To Join the Group just click the above given button "Join Now!" and click Join button on Google Group's Site.</b></h4>
 <h4><b> 3.After you join the Group, you will automatically get your access.</b></h4>
-<h3> 🗳️ Use Google Drive to access!</h3>
+<h3><b>🗳️ Use Google Drive to access!</b></h3>
 <h4><b> 1.After you joined the group! Now Go to "Google Drive" app for Android or IOS.</b></h4>
 <h4><b> 2.Or you can use Website to access Shared Drive on your PC or Laptop.</b></h4>
 <h4><b> 3.Now if you are using App, then Refresh it and click Shared Drive Tab Button as shown in the Image.</b></h4>
@@ -65,21 +65,21 @@
 <h4><b> 4.Or, If you are using Website from PC or Laptop, then click Shared Drive from Sub Menu.</b></h4>
 <p><img src="Img/5.png" alt="2" width="auto" height="10%" /> <!---Img already exist that's why---></p>
 <h4><b> 5.After following steps, you will see the Shared Drive Named "Mirror Bot" open it.</b></h4>
-<h2> 📥 Download Google Drive</h2>
+<h2><b>📥 Download Google Drive</b></h2>
 <h4> <b>For Android 📱: <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.docs" alt="Download-for-Android"> Download</a></b></h4>
 <h4> <b>For IOS 📟: <a href="https://apps.apple.com/in/app/google-drive-online-backup/id507874739"> Download</a></b></h4>
-<h2> 🎯Points To Be Remembered🎯</h2>
+<h4> <b>For Windows 🖥️: <a href="https://dl.google.com/drive-file-stream/GoogleDriveSetup.exe"> Download</a></b></h4>
+<h4> <b>For MacOS 🍎:<a href="https://dl.google.com/drive-file-stream/GoogleDriveSetup.exe"> Download</a></b></h4>
+<h2><b>🎯Points To Be Remembered🎯</b></h2>
 <h4><b>1.You can only access The Bot's Shared Drive from the account you have joined the Bot's Google Group.</b></h4>
 <h4><b>2.You will only see the "Join" button only until you join the group and not after you joined the Group.</b></h4>
-<h2>⛑Contact Us!</h2>
+<h2><b>⛑Contact Us!</b></h2>
 <h4><b>Don't Forget to checkout my Official Website: <a href="https://www.caduceus.ml">Check Out!</a></b></h4>
 <h4><b>Join our Update Channel at Telegram:<a href="https://telegram.me/TheCaduceusUPDATE"> Join Now!</a></b></h4>
 <h4><b>Directly Contact the Developer using Telegram <a href="https://telegram.me/HelpAutomatted_Bot">@HelpAutomatted_Bot</a></b></h4>
 
 
       <footer class="site-footer">
-        
-          <span class="site-footer-owner"><a href="https://github.com/TheCaduceus/Mirror-Bot-Access">Mirror-Bot-Access</a> is maintained by <a href="https://github.com/TheCaduceus">TheCaduceus</a>.</span>
         
         <span class="site-footer-credits">Copyright Owner:<a href="https://github.com/TheCaduceus"> Dr.Caduceus</a>.</span>
       </footer>
