--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <h4> <b>For IOS 📟: <a href="https://apps.apple.com/in/app/google-drive-online-backup/id507874739"> Download</a></b></h4>
 <h4> <b>For Windows 🖥️: <a href="https://dl.google.com/drive-file-stream/GoogleDriveSetup.exe"> Download</a></b></h4>
 <h4> <b>For MacOS 🍎:<a href="https://dl.google.com/drive-file-stream/GoogleDriveSetup.exe"> Download</a></b></h4>
+<h4> <b>For Linux 💻:<a href="" alt="Not Available"> Not Available</a></b></h4>
 <h2><b>🎯Points To Be Remembered🎯</b></h2>
 <h4><b>1.You can only access The Bot's Shared Drive from the account you have joined the Bot's Google Group.</b></h4>
 <h4><b>2.You will only see the "Join" button only until you join the group and not after you joined the Group.</b></h4>
